@@ -84,8 +84,11 @@ class fit_translation(TransformationBase):
 
 
     .. versionchanged:: 2.0.0
-        The transformation was changed from a function/closure to a class
-        with ``__call__``.
+       The transformation was changed from a function/closure to a class
+       with ``__call__``.
+    .. versionchanged:: 2.0.0
+       The transformation was changed to inherit from the base class for
+       limiting threads and checking if it can be used in parallel analysis.
     """
     def __init__(self, ag, reference, plane=None, weights=None,
                  max_threads=None, parallelizable=True):
@@ -180,6 +183,14 @@ class fit_rot_trans(TransformationBase):
     Returns
     -------
     MDAnalysis.coordinates.base.Timestep
+
+
+    .. versionchanged:: 2.0.0
+       The transformation was changed from a function/closure to a class
+       with ``__call__``.
+    .. versionchanged:: 2.0.0
+       The transformation was changed to inherit from the base class for
+       limiting threads and checking if it can be used in parallel analysis.
     """
     def __init__(self, ag, reference, plane=None, weights=None,
                  max_threads=1, parallelizable=True):
