@@ -113,6 +113,9 @@ class rotateby(TransformationBase):
     .. versionchanged:: 2.0.0
         The transformation was changed from a function/closure to a class
         with ``__call__``.
+    .. versionchanged:: 2.0.0
+       The transformation was changed to inherit from the base class for
+       limiting threads and checking if it can be used in parallel analysis.
     '''
     def __init__(self,
                  angle,
